Criação dos projetos e instalação de packages.

--- a/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/JSL.CadCaminhoneiro.Api.csproj
+++ b/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/JSL.CadCaminhoneiro.Api.csproj
@@ -32,5 +32,9 @@
     <ProjectReference Include="..\JSL.CadCaminhoneiro.Domain\JSL.CadCaminhoneiro.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 
 </Project>
