Implementação parcial da Api, Domain, core e Data.

--- a/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/JSL.CadCaminhoneiro.Api.csproj
+++ b/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/JSL.CadCaminhoneiro.Api.csproj
@@ -33,7 +33,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Controllers\v1\" />
+    <Folder Include="Infrastructure\" />
   </ItemGroup>
 
 
