--- a/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/appsettings.json
+++ b/backend/JSL.CadCaminhoneiro/src/JSL.CadCaminhoneiro.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLDBConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CadCaminhoneiro;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
